# notmuch-sys

./: Cargo.toml  README.md  search-index.js
notmuch_sys/: TAG_MAX.v.html  constant.FALSE.html  constant.MAJOR_VERSION.html  constant.MICRO_VERSION.html  constant.MINOR_VERSION.html  constant.TAG_MAX.html  constant.TRUE.html  enum.notmuch_config_list_t.html  enum.notmuch_database_mode_t.html  enum.notmuch_database_t.html  enum.notmuch_directory_t.html  enum.notmuch_exclude_t.html  enum.notmuch_filenames_t.html  enum.notmuch_message_flag_t.html  enum.notmuch_message_properties_t.html  enum.notmuch_message_t.html  enum.notmuch_messages_t.html  enum.notmuch_query_t.html  enum.notmuch_sort_t.html  enum.notmuch_status_t.html  enum.notmuch_tags_t.html  enum.notmuch_thread_t.html  enum.notmuch_threads_t.html  fn.notmuch_built_with.html  fn.notmuch_config_list_destroy.html  fn.notmuch_config_list_key.html  fn.notmuch_config_list_move_to_next.html  fn.notmuch_config_list_valid.html  fn.notmuch_config_list_value.html  fn.notmuch_database_add_message.html  fn.notmuch_database_begin_atomic.html  fn.notmuch_database_close.html  fn.notmuch_database_compact.html  fn.notmuch_database_create.html  fn.notmuch_database_create_verbose.html  fn.notmuch_database_destroy.html  fn.notmuch_database_end_atomic.html  fn.notmuch_database_find_message.html  fn.notmuch_database_find_message_by_filename.html  fn.notmuch_database_get_all_tags.html  (+222 more)
src/: lib.rs
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/notmuch_sys/: lib.rs.html
test/: main.rs
tests/: main.rs
(+49 files in other folders)
