[package]
name = "notmuch-sys"
version = "4.3.1"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "FFI bindings for notmuch"

documentation = "https://stebalien.github.io/notmuch-sys/notmuch_sys/"
repository = "https://github.com/Stebalien/notmuch-sys"
keywords = ["notmuch", "email", "mail", "maildir"]
license = "GPL-3.0"

[dependencies]
libc = "0.1"

[dev-dependencies]
tempdir = "0.3"
